tests/endtoend/failure/expected/error_expressions4e.compile.out
error_expressions4e.silly:1:14: error: parse error: mismatched input 'NE' expecting ';'
    1 | PRINT 1 EQ 2 NE 3;
      |              ^
